--- a/style.css
+++ b/style.css
@@ -1,9 +1,42 @@
 /*PC,スマホ共通スタイル*/
 body {
     font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN, Meiryo, Arial, sans-serif";
+    max-width: 1080px;
+    margin: 0 auto 0 auto;
+
 }
 
 p {
     font-size: 15px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+/*ナビゲーションのレイアウト*/
+#nav-pc {
+    font-size: 14px;   
+}
+
+#nav-pc ul {
+    display: flex;
+    padding-left: 0;
+}
+
+#nav-pc li {
+    list-style: none;
+}
+
+/*ナビゲーションのリンク装飾設定*/
+#nav-pc a {
+    text-decoration: none;
+    margin-left: 20px;
+    color: #0d0d0d;
+}
+
+#nav-pc a:hover {
+    text-decoration: underline;
 }
 
