--- a/style.css
+++ b/style.css
@@ -203,3 +203,30 @@ h3 {
     position: relative;
     bottom: -42px;
 }
+
+/*ABOUT US*/
+#aboutus {
+    margin: 80px auto 80px auto;
+}
+
+/*３つの組織文化と画像を入れる枠*/
+#aboutus > div {
+    display: flex;
+}
+
+/*　画像　*/
+.culture-img {
+    width: 50%;
+    align-self: flex-start;
+}
+
+.culture-img2 {
+    margin-top: 50px;
+    width: 100%;
+}
+
+/*3つの組織文化の表*/
+.culture-table {
+    margin-right: 50px;
+}
+
